--- a/src/main/resources/mall.properties
+++ b/src/main/resources/mall.properties
@@ -1,11 +1,10 @@
 
-ftp.server.ip=你的FTP服务器ip地址
-ftp.user=mallftp
-ftp.pass=ftppassword
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.server.ip=192.168.31.131
+ftp.user=zhousheng
+ftp.pass=zhousheng
+ftp.server.http.prefix=ftp://192.168.31.131/
 
+alipay.callback.url=http://zhousheng.natapp1.cc/order/alipay_callback.do
 
-alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
-
-password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
+password.salt = zhoushengsdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
