--- a/src/main/resources/mall.properties
+++ b/src/main/resources/mall.properties
@@ -1,8 +1,8 @@
 
-ftp.server.ip=192.168.31.131
-ftp.user=zhousheng
+ftp.server.ip=121.43.125.62
+ftp.user=ftpuser
 ftp.pass=zhousheng
-ftp.server.http.prefix=ftp://192.168.31.131/
+ftp.server.http.prefix=http://img.zhousheng.icu/
 
 alipay.callback.url=http://zhousheng.natapp1.cc/order/alipay_callback.do
 
