--- a/src/main/resources/mall.properties
+++ b/src/main/resources/mall.properties
@@ -4,7 +4,7 @@ ftp.user=ftpuser
 ftp.pass=zhousheng
 ftp.server.http.prefix=http://img.zhousheng.icu/
 
-alipay.callback.url=http://zhousheng.natapp1.cc/order/alipay_callback.do
+alipay.callback.url=http://www.zhousheng.icu/order/alipay_callback.do
 
 password.salt = zhoushengsdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
