--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,4 +1,4 @@
-db.driverLocation=${project.basedir}/src/main/tools/mysql-connector-java-5.1.9.jar
+db.driverLocation=git-repository/mall_learning/src/main/tools/mysql-connector-java-5.1.9.jar
 db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/mall?characterEncoding=utf-8&useUnicode=true&serverTimezone=UTC
 db.username=mall
