--- a/src/main/resources/mall.properties
+++ b/src/main/resources/mall.properties
@@ -6,5 +6,5 @@ ftp.server.http.prefix=http://img.zhousheng.icu/
 
 alipay.callback.url=http://www.zhousheng.icu/order/alipay_callback.do
 
-password.salt = zhoushengsdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
+password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
