--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
+<!--suppress MavenModelInspection, MybatisMapperXmlInspection -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com</groupId>
   <artifactId>mall</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>2.0-SNAPSHOT</version>
   <name>mall Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
@@ -68,6 +69,7 @@
       <artifactId>mybatis-spring</artifactId>
       <version>${org.mybatis.spring.version}</version>
     </dependency>
+
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
@@ -93,13 +95,13 @@
       <!--<scope>runtime</scope>-->
     </dependency>
 
-
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>1.1.2</version>
       <scope>compile</scope>
     </dependency>
+
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-core</artifactId>
@@ -119,20 +121,17 @@
       <version>20.0</version>
     </dependency>
 
-
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.5</version>
     </dependency>
 
-
     <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
       <version>3.2.1</version>
     </dependency>
-
 
     <dependency>
       <groupId>junit</groupId>
@@ -147,14 +146,12 @@
       <version>2.3</version>
     </dependency>
 
-
     <!-- id加密解密 -->
     <dependency>
       <groupId>org.hashids</groupId>
       <artifactId>hashids</artifactId>
       <version>1.0.1</version>
     </dependency>
-
 
     <!-- ftpclient -->
     <dependency>
@@ -178,9 +175,6 @@
       <version>2.0.1</version>
     </dependency>
 
-
-
-
     <!-- mybatis pager -->
 
     <dependency>
@@ -200,7 +194,6 @@
       <artifactId>jsqlparser</artifactId>
       <version>0.9.4</version>
     </dependency>
-
 
     <!-- alipay -->
     <dependency>
@@ -239,11 +232,20 @@
       <version>1.3</version>
     </dependency>
 
+    <!--  二期新增  -->
+
     <dependency>
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
-      <version>2.9.0</version>
+      <version>2.6.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.12</version>
+    </dependency>
+
   </dependencies>
 
 
@@ -275,7 +277,43 @@
       </plugin>
     </plugins>
 
+    <resources>
+      <resource>
+        <directory>src/main/resources.${deploy.type}</directory>
+        <excludes>
+          <exclude>*.jsp</exclude>
+        </excludes>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+    </resources>
+
   </build>
+
+  <profiles>
+    <profile>
+      <id>dev</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <deploy.type>dev</deploy.type>
+      </properties>
+    </profile>
+    <profile>
+      <id>beta</id>
+      <properties>
+        <deploy.type>beta</deploy.type>
+      </properties>
+    </profile>
+    <profile>
+      <id>prod</id>
+      <properties>
+        <deploy.type>prod</deploy.type>
+      </properties>
+    </profile>
+  </profiles>
 
 
 </project>
